Bug 42680 - some missing controls when thunar window is resized to > 8192px
Summary: some missing controls when thunar window is resized to > 8192px
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-07 12:30 UTC by Clemens Eisserer
Modified: 2011-11-08 00:42 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (6.22 KB, image/png)
2011-11-07 12:30 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2011-11-07 12:30:41 UTC
Created attachment 53268 [details]
screenshot

When resizing Thunar's main window > 8192px, a few widgets are not rendered properly (the combo-box button as well as the gtk2 scrollbars).
I was able to reproduce the problem with the "Mist" and "Clearlooks" gtk2 themes.

The bug does not bother me, as I don't use such insanely large windows ;)
Comment 1 Chris Wilson 2011-11-07 12:52:06 UTC
Which commit? I saw such bugs come and go...
Comment 2 Clemens Eisserer 2011-11-07 12:53:09 UTC
I tested against current head (sna/composite: Minor fixes in operator and colour reduction)
Comment 3 Chris Wilson 2011-11-07 12:55:53 UTC
And currently gone. :|
Comment 4 Chris Wilson 2011-11-07 14:58:10 UTC
My scrollbars are back...

More side-effects of

commit 5ba8ba7421e36bcdf83e84423595326939dbe7cd
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 7 22:55:10 2011 +0000

    sna: Avoid overwriting an upload buffer during readback

?
Comment 5 Clemens Eisserer 2011-11-07 15:07:16 UTC
unfourtunatly I can still reproduce the issue with current head (	sna/glyphs: Bypass masks for single glyphs) :/
Comment 6 Chris Wilson 2011-11-07 15:09:50 UTC
Nope, they disappeared later instead.
Comment 7 Chris Wilson 2011-11-08 00:42:02 UTC
commit 5f0886dae29429f498fb10a12d5dc8de6bd798fc
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Nov 8 00:02:18 2011 +0000

    sna/trapezoids: Use ints for the offsets to accommodate multiplication
    
    Although the original precison need only 16-bits to store the offsets,
    after projecting on to the sample grid we need a few more bits of
    precision and so need a larger integer type to avoid overflow and render
    glitches.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42680
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

And another one, and another one bites the dust.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.